--- a/aboutus.html
+++ b/aboutus.html
@@ -6,8 +6,11 @@
 	</head>
 
 	<body style="width:960px;margin:0 auto;">
-		<p><img src="images/header.gif" alt="" width="760" height="180"></p>
-		<p><a href="index.html"><img src="images/nav_home.gif" width="147" height="26" alt=""></a> <a href="aboutus.html"><img src="images/nav_aboutus.gif" width="147" height="26" alt=""></a> <a href="solutions.html"><img src="images/nav_solutions.gif" width="147" height="26" alt=""></a>  <a href="contactus.html"><img src="images/nav_contactus.gif" width="147" height="26" alt=""></a></p>
+		<p><img src="images/header.gif" alt="" width="880" height="230"></p>
+		<p><a href="index.html"><img src="images/nav_home.gif" width="142" height="27" alt=""></a> 
+		<a href="aboutus.html"><img src="images/nav_aboutus.gif" width="142" height="27" alt=""></a> 
+		<a href="solutions.html"><img src="images/nav_solutions.gif" width="142" height="27" alt=""></a>  
+		<a href="contactus.html"><img src="images/nav_contactus.gif" width="142" height="27" alt=""></a></p>
 		<h2>Company Overview</h2>
 		<p>With innovative approaches and advanced methodologies, Vecta Corp. provides scalable business solutions to help companies achieve success through revenue increase, cost management and user satisfaction.</p>
 		<p>Our approach stems from the three most important business growth aspects: helping companies reach prospects, assist in converting prospects to customers, and assist in retaining those customers. This is accomplished through our interactive solutions and expertise in providing a memorable and positive user experience.</p>
@@ -35,7 +38,7 @@
 		<em>Vice President, Sales and Marketing</em><br>
 		Mike serves as the Vice President of Sales and Marketing for Vecta Corp. In this role Mike oversees Vecta Corp's marketing and corporate communications efforts worldwide. Mike joined Vecta Corp. in early 1998 and worked in business development roles prior to being assigned to lead Vecta Corp's global vSolutions sales and marketing team in the summer of 2000. He initiated Vecta Corp's global branding and marketing campaigns as vSolutions global director and then Vice President of Marketing. In 2001, his role expanded to include overall responsibility for corporate marketing, sales, and communications.</p>
 
-		<img src="images/head_wilbur.gif" alt="" width="80" height="100">
+		<img src="images/head_wilbur.gif" alt="" width="90" height="120">
 		<p><strong>Wilbur</strong><br>
 		<em>Founder and CEO</em><br>
 		While Wilbur is the founder and CEO of Vecta Corp, he is primarily known for being the pioneer and world leader of creating vSolutions. Wilbur has led the commercialization of vSolution technology and its success as the world’s fastest-growing, most advanced technologies in its respective industry. Now used by tens of millions of consumers worldwide, vSolutions have been the technology of choice for governments and private organizations for nearly a decade.</p>
