--- a/contactus.html
+++ b/contactus.html
@@ -6,8 +6,11 @@
   </head>
 
   <body style="width:960px;margin:0 auto;">
-    <p><img src="images/header.gif" alt="" width="960" height="235"></p>
-    <p><a href="index.html"><img src="images/nav_home.gif" width="147" height="26" alt=""></a> <a href="aboutus.html"><img src="images/nav_aboutus.gif" width="147" height="26" alt=""></a> <a href="solutions.html"><img src="images/nav_solutions.gif" width="147" height="26" alt=""></a> <a href="contactus.html"><img src="images/nav_contactus.gif" width="147" height="26" alt=""></a></p>
+    <p><img src="images/header.gif" alt="" width="880" height="230"></p>
+    <p><a href="index.html"><img src="images/nav_home.gif" width="142" height="27" alt=""></a>
+    <a href="aboutus.html"><img src="images/nav_aboutus.gif" width="142" height="27" alt=""></a> 
+    <a href="solutions.html"><img src="images/nav_solutions.gif" width="142" height="27" alt=""></a> 
+    <a href="contactus.html"><img src="images/nav_contactus.gif" width="142" height="27" alt=""></a></p>
     <h2>Contact Us</h2>
     <p> Vecta Corp. HQ<br>
       555 Technology Pl.<br>
