Assignment-2 code edit
Assignment 2 code edit

--- a/contactus.html
+++ b/contactus.html
@@ -5,7 +5,7 @@
     <title>Contact Vecta Corporation</title>
   </head>
 
-  <body style="width:960px;margin:0 auto;">
+  <body style="width:960px;margin:0 20px;">
     <p><img src="images/header.gif" alt="" width="880" height="230"></p>
     <p><a href="index.html"><img src="images/nav_home.gif" width="142" height="27" alt=""></a>
     <a href="aboutus.html"><img src="images/nav_aboutus.gif" width="142" height="27" alt=""></a> 
