Code for assignment 2
Code for assignment 2

--- a/aboutus.html
+++ b/aboutus.html
@@ -6,11 +6,13 @@
 	</head>
 
 	<body style="width:960px;margin:0 auto;">
+		<header>
 		<p><img src="images/header.gif" alt="" width="880" height="230"></p>
 		<p><a href="index.html"><img src="images/nav_home.gif" width="142" height="27" alt=""></a> 
 		<a href="aboutus.html"><img src="images/nav_aboutus.gif" width="142" height="27" alt=""></a> 
 		<a href="solutions.html"><img src="images/nav_solutions.gif" width="142" height="27" alt=""></a>  
 		<a href="contactus.html"><img src="images/nav_contactus.gif" width="142" height="27" alt=""></a></p>
+		</header>
 		<h2>Company Overview</h2>
 		<p>With innovative approaches and advanced methodologies, Vecta Corp. provides scalable business solutions to help companies achieve success through revenue increase, cost management and user satisfaction.</p>
 		<p>Our approach stems from the three most important business growth aspects: helping companies reach prospects, assist in converting prospects to customers, and assist in retaining those customers. This is accomplished through our interactive solutions and expertise in providing a memorable and positive user experience.</p>
@@ -43,7 +45,9 @@
 		<em>Founder and CEO</em><br>
 		While Wilbur is the founder and CEO of Vecta Corp, he is primarily known for being the pioneer and world leader of creating vSolutions. Wilbur has led the commercialization of vSolution technology and its success as the world’s fastest-growing, most advanced technologies in its respective industry. Now used by tens of millions of consumers worldwide, vSolutions have been the technology of choice for governments and private organizations for nearly a decade.</p>
 		<hr>
-		<p>Copyright &copy; 2016 - All Rights Reserved</p>
-
+		<footer>
+			<p>Copyright &copy; 2016 - All Rights Reserved</p>
+		</footer>
+		
 	</body>
 </html>
