--- a/solutions.html
+++ b/solutions.html
@@ -6,11 +6,13 @@
   </head>
 
   <body style="width:960px;margin:0 auto;">
+    <header>
     <p><img src="images/header.gif" alt="" width="880" height="230"></p>
     <p><a href="index.html"><img src="images/nav_home.gif" width="142" height="27" alt=""></a>
     <a href="aboutus.html"><img src="images/nav_aboutus.gif" width="142" height="27" alt=""></a> 
     <a href="solutions.html"><img src="images/nav_solutions.gif" width="142" height="27" alt=""></a> 
     <a href="contactus.html"><img src="images/nav_contactus.gif" width="142" height="27" alt=""></a></p>
+  </header>
     <h2>Our Solutions</h2>
     <p><strong>vProspect 2.0</strong></p>
     <p><img src="images/logo_vprospect.gif" width="72" height="42" alt=""></p>
@@ -45,6 +47,8 @@
       <li>Analyze site visitor behavior through traffic analysis, usability studies and interactive polling. Recommending and making site and application adjustments to improve usability and user experience.</li>
     </ul>
     <hr>
+    <footer>
     <p>Copyright &copy; 2016 - All Rights Reserved</p>
+  </footer>
   </body>
 </html>
