--- a/contactus.html
+++ b/contactus.html
@@ -5,18 +5,24 @@
     <title>Contact Vecta Corporation</title>
   </head>
 
-  <body style="width:960px;margin:0 20px;">
-    <p><img src="images/header.gif" alt="" width="880" height="230"></p>
+  <body style="width:960px;margin:0 auto;">
+    <header>
+      <p><img src="images/header.gif" alt="" width="880" height="230"></p>
     <p><a href="index.html"><img src="images/nav_home.gif" width="142" height="27" alt=""></a>
     <a href="aboutus.html"><img src="images/nav_aboutus.gif" width="142" height="27" alt=""></a> 
     <a href="solutions.html"><img src="images/nav_solutions.gif" width="142" height="27" alt=""></a> 
     <a href="contactus.html"><img src="images/nav_contactus.gif" width="142" height="27" alt=""></a></p>
+    </header>
+    
     <h2>Contact Us</h2>
     <p> Vecta Corp. HQ<br>
       555 Technology Pl.<br>
       San Diego, CA 92555<br>
       (555) 555-5555 </p>
     <hr>
-    <p>Copyright &copy; 2016 - All Rights Reserved</p>
+    <footer>
+      <p>Copyright &copy; 2016 - All Rights Reserved</p>
+    </footer>
+    
   </body>
 </html>
