--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 	<title>Welcome to Vecta Corporation</title>
 </head>
 
-<body style="width:960px;margin:0 20px;">
+<body style="width:960px;margin:0 auto;">
+    <header>
     <p><img src="images/header.gif" alt="" width="880" height="230"></p>
     <p><a href="index.html"><img src="images/nav_home.gif" width="142" height="27" alt="">
     </a><a href="aboutus.html"><img src="images/nav_aboutus.gif" width="142" height="27" alt="">
     </a><a href="solutions.html"><img src="images/nav_solutions.gif" width="142" height="27" alt="">
     </a><a href="contactus.html"><img src="images/nav_contactus.gif" width="142" height="27" alt=""></a></p>
+    </header>
     <h2>Welcome</h2>
     <p>With innovative approaches and advanced methodologies, Vecta Corporation provides scalable business solutions to help companies achieve success through revenue increase, cost management, and user satisfaction. Our approach stems from the three most important business growth aspects: helping companies reach prospects, assist in converting prospects to customers, and assist in retaining those customers. This is accomplished through our interactive solutions and expertise in providing a memorable and positive user experience.</p>
     <h2>Our Solutions</h2>
@@ -29,6 +31,6 @@
     Founder and CEO<br>
     <a href="http://www.modulemedia.com">Module Media</a></p>
     <hr>
-    <p>Copyright &copy; 2016 - All Rights Reserved</p>
+    <footer><p>Copyright &copy; 2016 - All Rights Reserved</p></footer>
 </body>
 </html>
