Code for assignment-2
Code for assignment-2

--- a/solutions.html
+++ b/solutions.html
@@ -47,8 +47,6 @@
       <li>Analyze site visitor behavior through traffic analysis, usability studies and interactive polling. Recommending and making site and application adjustments to improve usability and user experience.</li>
     </ul>
     <hr>
-    <footer>
-    <p>Copyright &copy; 2016 - All Rights Reserved</p>
-  </footer>
+    <footer><p>Copyright &copy; 2016 - All Rights Reserved</p></footer>
   </body>
 </html>
