--- a/aboutus.html
+++ b/aboutus.html
@@ -45,9 +45,7 @@
 		<em>Founder and CEO</em><br>
 		While Wilbur is the founder and CEO of Vecta Corp, he is primarily known for being the pioneer and world leader of creating vSolutions. Wilbur has led the commercialization of vSolution technology and its success as the world’s fastest-growing, most advanced technologies in its respective industry. Now used by tens of millions of consumers worldwide, vSolutions have been the technology of choice for governments and private organizations for nearly a decade.</p>
 		<hr>
-		<footer>
-			<p>Copyright &copy; 2016 - All Rights Reserved</p>
-		</footer>
+		<footer><p>Copyright &copy; 2016 - All Rights Reserved</p></footer>
 		
 	</body>
 </html>
